# NoSuckShell

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.agents/skills/nosuckshell_ops/: SKILL.md
.agents/skills/nosuckshell_ops/scripts/: validate_project.sh
.cursor/rules/: english-ui-copy.mdc  github-cli.mdc  project-guides.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  manual-build.yml  release.yml  screenshots.yml
apps/desktop/: NOTICE  README.md  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
apps/desktop/e2e/: app.spec.ts  hosts.spec.ts  smoke.spec.ts  workspace.spec.ts
apps/desktop/e2e/screenshots/: generate.spec.ts
apps/desktop/patches/: vite-plugin-monaco-editor+1.1.0.patch
apps/desktop/scripts/: generate-app-icon-square.py  generate-windows-installer-graphics.py
apps/desktop/src/: App.js  App.tsx  layoutPresets.js  layoutPresets.ts  main.js  main.tsx  novnc-rfb.d.ts  session-output-bridge.ts  styles.css  tauri-api.js  tauri-api.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  PKGBUILD  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_prefs.rs  backup.rs  host_metadata.rs  key_crypto.rs  known_hosts.rs  layout_profiles.rs  license.rs  main.rs  proxmux_ws_proxy.rs  quick_ssh.rs  secure_store.rs  sensitive.rs  session.rs  sftp.rs  sftp_export.rs  ssh_config.rs  ssh_home.rs  store_models.rs  testutil.rs  view_profiles.rs
apps/desktop/src-tauri/src/plugins/: demo.rs  file_workspace.rs  hetzner.rs  mod.rs  proxmux.rs
apps/desktop/src/components/: AddHostModal.tsx  AppSettingsPanel.tsx  FilePaneContextMenu.tsx  FilePaneDialogs.tsx  FilePanePathBreadcrumbs.tsx  FilePaneTableHead.test.tsx  FilePaneTableHead.tsx  FilePaneTextEditor.tsx  FilePaneToolbar.tsx  HelpPanel.js  HelpPanel.tsx  HetznerSidebarPanel.tsx  HetznerVncPane.tsx  HostContextMenu.tsx  HostForm.js  HostForm.test.js  HostForm.test.tsx  HostForm.tsx  HostListRow.test.tsx  HostListRow.tsx  HostMetadataFields.tsx  HostSidebar.test.tsx  HostSidebar.tsx  InlineSpinner.tsx  LayoutCommandCenter.js  LayoutCommandCenter.tsx  LocalFilePane.tsx  NssCommanderFKeyBar.tsx  NssCommanderFileOpsBar.tsx  OverlaySpinner.tsx  PaneContextMenu.tsx  ProxmoxLxcTermPane.tsx  ProxmoxNodeTermPane.tsx  ProxmoxQemuVncPane.tsx  ProxmoxQemuVncPane.tsx.rej  ProxmoxStandaloneConsoleView.tsx  ProxmoxStandaloneRoot.tsx  ProxmuxSidebarPanel.polling.test.tsx  ProxmuxSidebarPanel.test.ts  ProxmuxSidebarPanel.tsx  (+10 more)
apps/desktop/src/e2e/: tauri-core-shim.js  tauri-core-shim.ts  tauri-event-shim.js  tauri-event-shim.ts
apps/desktop/src/features/: app-bootstrap.ts  app-id.ts  app-preferences.ts  builtin-plugin-ids.ts  connect-timeouts.ts  context-actions.js  context-actions.test.js  context-actions.test.ts  context-actions.ts  context-menu-viewport.test.ts  context-menu-viewport.ts  external-http-url.test.ts  external-http-url.ts  file-export-dest.ts  file-pane-column-sizing.test.ts  file-pane-column-sizing.ts  file-pane-dnd.test.ts  (+78 more)
docs/: CHANGELOG.md  CODE_GUIDE.md  README.md  STYLE_GUIDE.md  USER_HELP.md  architecture.md  backup-security.md  license-server-runbook.md  licensing.md  refactoring-app-roadmap.md  releases.md  roadmap.md  terms-of-sale.md
docs/media/screenshots/: README.md  VIDEO.md  metainfo-captions.xml
docs/plans/: 2026-03-17-ssh-manager-design.md  2026-03-23-ssh-domain-and-export.md
docs/superpowers/specs/: 2026-03-23-proxmox-console-integration-analysis.md
img/: logo_text__transparent.xcf  logo_text_slogan_transparent.xcf  logo_text_transparent.xcf
scripts/: capture-store-screenshots.sh  ensure-desktop-deps.cjs
services/license-server/: Cargo.toml  README.md
services/license-server/src/: main.rs
(+30 files in other folders)
