[package]
name = "src-tauri"
version = "0.1.0-beta.6"
edition = "2024"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
dirs = "6"
home = "0.5.12"
portable-pty = "0.9.0"
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
uzers = "0.12"
