[package]
name = "src-tauri"
version = "0.1.0-beta.7"
edition = "2024"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
dirs = "6"
home = "0.5.12"
portable-pty = "0.9.0"
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["handshake", "connect"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
futures-util = "0.3"
url = "2.5"
http = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
fs2 = "0.4"
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["serde", "alloc"] }
hex = "0.4.3"
open = "5.3"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
soup3 = "0.5.0"
webkit2gtk = { version = "2.0.2", features = ["v2_32"] }

[dev-dependencies]
tempfile = "3"
